--- a/windows/create-new-window/index.html
+++ b/windows/create-new-window/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Electron Study - Create and manage windows</title>
+    <title>Electron Study - Create new window</title>
 
 </head>
 
